--- a/research.html
+++ b/research.html
@@ -151,7 +151,7 @@
         }
     </style>
 
-    <title>Omar Olivarez | Teaching</title>
+    <title>Omar Olivarez | Research</title>
   </head>
   <body>
 
@@ -173,10 +173,10 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Research</a>
+              <a class="nav-link" href="#">Research <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Teaching <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="teaching.html">Teaching</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Misc</a>
@@ -194,13 +194,13 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
-            <h1 class="display-4">Teaching</h1>
-            <p class="lead">My courses, teaching philosophy, and materials</p>
+            <h1 class="display-4">Research</h1>
+            <p class="lead">My research projects</p>
         </div>
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am currently working on Harvard University's teaching certificate and, in 2023, attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p>
+        <p class="fs-5">I am interested in the economics of advanced technologies (such as AI, robotics) and studying how they impact the labor market.</p>
       </div>
 
       <div class="container my-5">
