--- a/teaching.html
+++ b/teaching.html
@@ -173,7 +173,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Research</a>
+              <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Teaching <span class="sr-only">(current)</span></a>
