--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p> </p> <!-- Curriculum Vitae | HBS Website | Bluesky | LinkedIn -->
+                    <p>Curriculum Vitae | <a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1308412">HBS Website</a> | <a href="https://bsky.app/profile/omarolivarez.bsky.social">Bluesky</a> | <a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></p> <!-- Curriculum Vitae | HBS Website | Bluesky | LinkedIn -->
                     <!--<p><a class="btn btn-dark" href="#" role="button">Learn more &raquo;</a></p> -->
                 </div>
             </div>
