--- a/research.html
+++ b/research.html
@@ -200,60 +200,26 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am interested in the economics of advanced technologies (such as AI, robotics) and studying how they impact the labor market.</p>
+        <p class="fs-5">Broadly, I am interested in the economics of dynamic technologies such as AI and robotics. I am interested in the labor market implications of these technologies as well as how they affect consumer decision making. Please reach out to me if you'd like to chat or exchange ideas!</p>
       </div>
 
       <div class="container my-5">
     
-      <!-- First Row Heading -->
-      <h3 class="mb-3">Courses as Instructor</h3>
-      
-      <!-- First Row of Cards -->
-      <div class="row gx-4 gy-4">
-          <div class="col-md-4">
-              <a href="courses/course1.html" class="text-decoration-none">
-                  <div class="card">
-                      <div class="card-placeholder" style="background-color: #cd5955;"></div> 
-                      <div class="card-body">
-                          <h5 class="card-title">The Economics of Information and Technology</h5>
-                          <p class="card-text">Harvard Undergraduate Economics</p>
-                          <div class="d-flex justify-content-between">
-                            <p class="card-text"><small class="text-muted">Fall 2023</small></p>
-                            <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
-                          </div>
-                      </div>
-                  </div>
-              </a>
-          </div>
-          <!--<div class="col-md-4">
-              <a href="index.html" class="text-decoration-none">
-                <div class="card">
-                    <div class="card-placeholder" style="background-color: #ce846d;"></div>
-                    <div class="card-body">
-                        <h5 class="card-title">Course 2 <span style="display: block;">&nbsp;</span></h5>
-                        <p class="card-text">Course description</p>
-                        <p class="card-text"><small class="text-muted">2024</small></p>
-                    </div>
-                </div>
-              </a>
-          </div>-->
-      </div>
   
       <!-- Space between first row and second heading -->
-      <h3 class="mt-5 mb-3">Courses as Teaching assistant</h3>
+      <h3 class="mt-5 mb-3">Research projects</h3>
   
       <!-- Second Row of Cards -->
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
-            <a href="courses/course3.html" class="text-decoration-none">
+            <a href="#" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Strategy and Technology </h5> <!--<span style="display: block;">&nbsp;</span>-->
-                      <p class="card-text">HBS MBA Elective<br> </p>
+                      <h5 class="card-title">The effects of AI on consumer decision making</h5> <!--<span style="display: block;">&nbsp;</span>-->
+                      <p class="card-text"><i>Solo-author</i>i><br> </p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Fall 2023</small></p>
-                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                        <p class="card-text"><small class="text-muted">Active project</small></p>
                       </div>
                   </div>
               </div>
@@ -264,11 +230,10 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
-                      <p class="card-text">Harvard Graduate Elective</p>
+                      <h5 class="card-title">Outsourcing and internationalization in modern supply chains</h5>
+                      <p class="card-text"><i>with S. Greenstein, R. Zhang, H. Zhang, N. Greenstein, D. Kim, R. Fontana</i></p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">F 2024, S 2024, S 2023</small></p>
-                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                        <p class="card-text"><small class="text-muted">Active project</small></p>
                       </div>
                   </div>
                 </div>
@@ -279,11 +244,10 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Empirical Methods II</h5> <!--<span style="display: block;">&nbsp;</span>-->
-                      <p class="card-text">Harvard Masters Econometrics Course</p>
+                      <h5 class="card-title">The Labor Intensity of R&D Labor</h5> <!--<span style="display: block;">&nbsp;</span>-->
+                      <p class="card-text"><i>with K. Myers and J. Boudou</i></p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Spring I 2025</small></p>
-                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                        <p class="card-text"><small class="text-muted">Active project</small></p>
                       </div>
                   </div>
               </div>
