--- a/research.html
+++ b/research.html
@@ -217,9 +217,9 @@
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
                       <h5 class="card-title">The effects of AI on consumer decision making</h5> <!--<span style="display: block;">&nbsp;</span>-->
-                      <p class="card-text"><i>Solo-author</i>i><br> </p>
+                      <p class="card-text"><i>Solo-author</i><br> </p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Active project</small></p>
+                        <p class="card-text"><small class="text-muted"><i>Active project</i>i></small></p>
                       </div>
                   </div>
               </div>
@@ -233,7 +233,7 @@
                       <h5 class="card-title">Outsourcing and internationalization in modern supply chains</h5>
                       <p class="card-text"><i>with S. Greenstein, R. Zhang, H. Zhang, N. Greenstein, D. Kim, R. Fontana</i></p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Active project</small></p>
+                        <p class="card-text"><small class="text-muted"><i>Active project</i>i></small></p>
                       </div>
                   </div>
                 </div>
@@ -247,7 +247,7 @@
                       <h5 class="card-title">The Labor Intensity of R&D Labor</h5> <!--<span style="display: block;">&nbsp;</span>-->
                       <p class="card-text"><i>with K. Myers and J. Boudou</i></p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Active project</small></p>
+                        <p class="card-text"><small class="text-muted"><i>Active project</i>i></small></p>
                       </div>
                   </div>
               </div>
