--- a/research.html
+++ b/research.html
@@ -195,7 +195,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Research</h1>
-            <p class="lead">My research projects</p>
+            <p class="lead">Some of my academic work</p>
         </div>
       </div>
 
