--- a/research.html
+++ b/research.html
@@ -226,7 +226,7 @@
             </a>
           </div>
           <div class="col-md-4">
-            <a href="courses/course4.html" class="text-decoration-none">
+            <a href="#" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
@@ -240,7 +240,7 @@
               </a>
           </div>
           <div class="col-md-4">
-            <a href="courses/course5.html" class="text-decoration-none">
+            <a href="#" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
