--- a/research.html
+++ b/research.html
@@ -244,7 +244,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">The Labor Intensity of R&D Labor</h5> <!--<span style="display: block;">&nbsp;</span>-->
+                      <h5 class="card-title">R&D Labor Intensity</h5> <!--<span style="display: block;">&nbsp;</span>-->
                       <p class="card-text"><i>with K. Myers and J. Boudou</i></p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i>i></small></p>
