--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="content-wrapper">
-            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.</p>
-            <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas.</p>
+            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. I am excited to study emerging technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these dynamics technologies shape individual consumer decision making and as well as the labor market overall.</p> <--My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.-->
+            <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas. My work experience and current research demonstrate the enthusiasm I have for studying the economic implications of new technologies.</p>
           </div>
           
         </br>
