--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -101,7 +101,7 @@
 
     <title>Omar Olivarez</title>
   </head>
-  <!--<body>
+  <body>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> <!-- UNCOMMENT HERE-->
       <div class="container-fluid">
@@ -120,7 +120,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <!--li class="nav-item">
               <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
@@ -165,9 +165,9 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="content-wrapper">
-            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!--My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.-->
+            <!--<p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!--My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.-->
             <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas. Through my work experience and academic research, I have continuously learned about new technologies and have become increasingly interested in learning their economic consequences.</p>
-          </div>
+          </div> 
           
         </br>
         </div>
@@ -217,5 +217,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>-->
-</html>-->
+  </body>
+</html>
