--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> <!-- UNCOMMENT HERE-->
+    <!-- <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> <!-- UNCOMMENT HERE
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
@@ -120,7 +120,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <!--li class="nav-item">
+            li class="nav-item">
               <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
@@ -136,7 +136,7 @@
           </ul>
         </div>
         </div> 
-    </nav> <!--UNCOMMENT HERE--> 
+    </nav> --> <!--UNCOMMENT HERE--> 
     <main role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -165,8 +165,8 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="content-wrapper">
-            <!--<p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!--My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.-->
-            <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas. Through my work experience and academic research, I have continuously learned about new technologies and have become increasingly interested in learning their economic consequences.</p>
+            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace. <!--I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!---->
+            <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas. </p> <!-- Through my work experience and academic research, I have continuously learned about new technologies and have become increasingly interested in learning their economic consequences.-->
           </div> 
           
         </br>
