--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
+                    <p><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1308412">HBS Website</a> | <a href="https://bsky.app/profile/omarolivarez.bsky.social">Bluesky</a> | <a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></p>
                     <!--<p><a href="https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1308412">HBS Website</a> | <a href="https://bsky.app/profile/omarolivarez.bsky.social">Bluesky</a> | <a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></p> <!-- Curriculum Vitae | HBS Website | Bluesky | LinkedIn -->
                     <!--<p><a class="btn btn-dark" href="#" role="button">Learn more &raquo;</a></p> -->
                 </div>
@@ -165,7 +166,7 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="content-wrapper">
-            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace. <!--I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!---->
+            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. I'm interested in the behavioral foundations that explain how people evaluate their prospects. I use microeconomic theory to model how decision makers form their beliefs and complement this with experimental methods to generate empirical support for my theories. <!--My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.  -- I am excited to study dynamic technologies such as artificial intelligence and robotics from an economics perspective. In particular, I am interested in learning how these emerging technologies shape individual consumer decision making and as well as the labor market overall.</p> <!---->
             <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas. </p> <!-- Through my work experience and academic research, I have continuously learned about new technologies and have become increasingly interested in learning their economic consequences.-->
           </div> 
           
