--- a/teaching1.html
+++ b/teaching1.html
@@ -200,7 +200,7 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am currently working on Harvard University's teaching certificate and, in 2023, attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p>
+        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am a recipient of Harvard University's certificate in teaching, which included: 1) study and practice of pedagogical methods over the course of 3 semesters, 2) the development of my teaching statement, and 3) the creation of an original syllabus. In 2023, I also attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop to further develop my teaching style.</p>
       </div>
 
       <div class="container my-5">
@@ -225,18 +225,21 @@
                   </div>
               </a>
           </div>
-          <!--<div class="col-md-4">
-              <a href="index.html" class="text-decoration-none">
+          <div class="col-md-4">
+              <a href="courses/course1.html" class="text-decoration-none">
                 <div class="card">
                     <div class="card-placeholder" style="background-color: #ce846d;"></div>
                     <div class="card-body">
-                        <h5 class="card-title">Course 2 <span style="display: block;">&nbsp;</span></h5>
-                        <p class="card-text">Course description</p>
-                        <p class="card-text"><small class="text-muted">2024</small></p>
+                        <h5 class="card-title">Managerial Decision Making</h5>
+                          <p class="card-text">Harvard Undergraduate Economics</p>
+                          <div class="d-flex justify-content-between">
+                            <p class="card-text"><small class="text-muted">Spring 2025</small></p>
+                            <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                          </div>
                     </div>
                 </div>
               </a>
-          </div>-->
+          </div>
       </div>
   
       <!-- Space between first row and second heading -->
