--- a/courses/course2.html
+++ b/courses/course2.html
@@ -118,7 +118,7 @@
         }
     </style>
 
-    <title>EC-970 Course</title>
+    <title>Economics of managerial decision making course</title>
   </head>
   <body>
 
