--- a/courses/course2.html
+++ b/courses/course2.html
@@ -169,7 +169,7 @@
       <div class="container">
         <div class="row">
           <div class="content-wrapper">
-            <p class="fs-5">Managers are an organization’s decision makers. They are challenged each day with a variety of difficult decisions, the consequences of which impact their organization’s competitiveness in the market. We will use the economics toolkit to understand how managers make these decisions. Using research from labor, organizational, and innovation economics, students will learn how managers can run productive organizations. </p>
+            <p class="fs-5">Managers are an organization’s decision makers. They are challenged each day with a variety of difficult decisions, the consequences of which impact their organization’s competitiveness in the market. Students will use the economics toolkit to understand how managers make these decisions. Drawing on research from labor, organizational, and innovation economics, students will learn how managers can run productive organizations. </p>
           </div>
         </div>
       </div>
@@ -188,9 +188,9 @@
             <div class="col-12 col-md-6">
                 <h3>Course objectives</h3>
                 <ul>
-                  <li>to practice applying statistical methods to the analysis of data</li>
-                  <li>to read and write high-quality research papers in economics</li>
-                  <li>to apply economic analyses to specific subject areas (management)</li>
+                  <li>practice applying statistical methods to the analysis of data</li>
+                  <li>read and write high-quality research papers in economics</li>
+                  <li>apply economic analyses to specific subject areas (management)</li>
                 </ul>
             </div>
         </div>
