--- a/courses/course1.html
+++ b/courses/course1.html
@@ -188,9 +188,9 @@
             <div class="col-12 col-md-6">
                 <h3>Course objectives</h3>
                 <ul>
-                  <li>to practice applying statistical methods to the analysis of data</li>
-                  <li>to read and write high-quality research papers in economics</li>
-                  <li>to apply economic analyses to specific subject areas</li>
+                  <li>practice applying statistical methods to the analysis of data</li>
+                  <li>read and write high-quality research papers in economics</li>
+                  <li>apply economic analyses to specific subject areas (digitization and labor)</li>
                 </ul>
             </div>
         </div>
