--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="description" content="Omar Olivarez - PhD Candidate at Harvard Business School researching automation, labor, and management">
+    <meta name="author" content="Omar Olivarez">
+    <link rel="canonical" href="https://omarolivarez.com/">
+  
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Omar Olivarez">
+    <meta property="og:description" content="PhD Candidate at Harvard Business School researching automation, labor, and management">
+    <meta property="og:url" content="https://omarolivarez.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Omar Olivarez">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
