Uncomment navigation bar in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </head>
   <body>
 
-    <!-- <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> <!-- UNCOMMENT HERE
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> 
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
@@ -147,7 +147,7 @@
           </ul>
         </div>
         </div> 
-    </nav> --> <!--UNCOMMENT HERE--> 
+    </nav>  <!--UNCOMMENT HERE--> 
     <main role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
