more UI changes

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p><a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></p>
-                    <p><a class="btn btn-dark" href="#" role="button">CV</a></p>
+                    <p><i><a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></i></p>
+                    <p><a class="btn btn-dark" href="#" role="button" style="padding-left: 2.5em; padding-right: 2.5em;">CV</a></p>
                 </div>
             </div>
         </div>
