--- a/research.html
+++ b/research.html
@@ -195,12 +195,12 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Research</h1>
-            <p class="lead">Some of my academic work</p>
+            <p class="lead">My academic work</p>
         </div>
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">Broadly, I am interested in the economics of dynamic technologies such as AI and robotics. I am interested in the labor market implications of these technologies as well as how they affect consumer decision making. Please reach out to me if you'd like to chat or exchange ideas!</p>
+        <p class="fs-5">My research examines how technology reshapes the organization of work and the structure of firms. I focus on the labor market consequences of and organizational responses to advanced technologies, including artificial intelligence, robotics, and automation. I am particularly interested in understanding how these technologies influence firm boundaries, job design, and competitive dynamics. To address these questions, I combine causal inference methods with large-scale administrative and proprietary datasets.</p>
       </div>
 
       <div class="container my-5">
@@ -216,7 +216,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">The effects of automation on the design of work</h5>
+                      <h5 class="card-title">The effects of automation on the design of work<br>&nbsp;</h5>
                       <p class="card-text"><i>Solo-author</i><br> </p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i></small></p>
