--- a/teaching.html
+++ b/teaching.html
@@ -150,12 +150,6 @@
             color: inherit !important;
         }
 
-        /* Standardize card title heights on desktop (2 lines for teaching page) */
-        @media (min-width: 768px) {
-            .card-title {
-                min-height: 3rem; /* Approximately 2 lines at default line-height */
-            }
-        }
     </style>
 
     <title>Omar Olivarez | Teaching</title>
@@ -230,7 +224,7 @@
                 <div class="card">
                     <div class="card-placeholder" style="background-color: #ce846d;"></div>
                     <div class="card-body">
-                        <h5 class="card-title">Managerial Decision Making</h5>
+                        <h5 class="card-title">The Economics of Managerial Decision Making</h5>
                           <p class="card-text">Harvard Undergraduate Economics</p>
                           <div class="d-flex justify-content-between">
                             <p class="card-text"><small class="text-muted">Spring 2025</small></p>
