changes to research description

--- a/research.html
+++ b/research.html
@@ -200,7 +200,7 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">My research examines how technology reshapes the organization of work and the structure of firms. I focus on the labor market consequences of and organizational responses to advanced technologies, including artificial intelligence, robotics, and automation. I am particularly interested in understanding how these technologies influence firm boundaries, job design, and competitive dynamics. To address these questions, I combine causal inference methods with large-scale administrative and proprietary datasets.</p>
+        <p class="fs-5">I conduct applied microeconomic research on how new technologies reshape firms, work, and competition. My work examines the labor market and organizational effects of automation technologies such as artificial intelligence and robotics, with a focus on changes to firm boundaries, job design, and competitive dynamics. To address these questions, I apply causal inference methods and machine learning to large-scale datasets.</p>
       </div>
 
       <div class="container my-5">
@@ -216,8 +216,8 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">The effects of automation on the design of work<br>&nbsp;</h5>
-                      <p class="card-text"><i>Solo-author</i><br> </p>
+                      <h5 class="card-title">The effects of automation on the design of work</h5>
+                      <p class="card-text"><i>Solo-author</i><br>&nbsp;</p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i></small></p>
                       </div>
@@ -231,7 +231,7 @@
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Outsourcing and internationalization in modern supply chains</h5>
-                      <p class="card-text"><i>with R. Fontana, S. Greenstein, N. Greenstein, D. Kim, R. Zhang, H. Zhang</i></p>
+                      <p class="card-text"><i>with R. Fontana, N. Greenstein, S. Greenstein, D. Kim, H. Zhang, R. Zhang</i></p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i></small></p>
                       </div>
