--- a/index.html
+++ b/index.html
@@ -103,10 +103,19 @@
         }
 
         /* On Mobile: make the footer disappear */
-        @media (max-width: 767px) { 
+        @media (max-width: 767px) {
             .footer {
                 display: none;
             }
+        }
+
+        /* Text links styling - black with underline on hover */
+        .text-link {
+            color: black !important;
+            text-decoration: none;
+        }
+        .text-link:hover {
+            text-decoration: underline;
         }
     </style>
 
@@ -158,8 +167,8 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p><i><a href="https://www.linkedin.com/in/omarolivarez/">LinkedIn</a></i></p>
-                    <p><a class="btn btn-dark" href="#" role="button" style="padding-left: 2.5em; padding-right: 2.5em;">CV</a></p>
+                    <p><i><a href="index.html" class="text-link">CV</a> | <a href="https://www.linkedin.com/in/omarolivarez/" class="text-link">LinkedIn</a></i></p>
+                    <!--<p><a class="btn btn-dark" href="#" role="button" style="padding-left: 2.5em; padding-right: 2.5em;">CV</a></p>-->
                 </div>
             </div>
         </div>
