adjusting square sizes again

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
         .text-link:hover {
             text-decoration: underline;
         }
+
+        /* Active navbar indicator - bottom border and darker text */
+        .nav-item.active .nav-link {
+            border-bottom: 2px solid #333;
+            padding-bottom: 0.3rem;
+            color: #000 !important;
+            font-weight: 500;
+        }
     </style>
 
     <title>Omar Olivarez</title>
@@ -167,7 +175,7 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p><i><a href="index.html" class="text-link">CV</a> | <a href="https://www.linkedin.com/in/omarolivarez/" class="text-link">LinkedIn</a></i></p>
+                    <p><i><a href="index.html" class="text-link">CV</a></i>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i><a href="https://www.linkedin.com/in/omarolivarez/" class="text-link">LinkedIn</a></i></p>
                     <!--<p><a class="btn btn-dark" href="#" role="button" style="padding-left: 2.5em; padding-right: 2.5em;">CV</a></p>-->
                 </div>
             </div>
