--- a/research.html
+++ b/research.html
@@ -156,6 +156,14 @@
                 min-height: 4.5rem; /* Approximately 3 lines at default line-height */
             }
         }
+
+        /* Active navbar indicator - bottom border and darker text */
+        .nav-item.active .nav-link {
+            border-bottom: 2px solid #333;
+            padding-bottom: 0.3rem;
+            color: #000 !important;
+            font-weight: 500;
+        }
     </style>
 
     <title>Omar Olivarez | Research</title>
