--- a/teaching.html
+++ b/teaching.html
@@ -150,6 +150,20 @@
             color: inherit !important;
         }
 
+        /* Standardize card title heights on desktop (2 lines for teaching page) */
+        @media (min-width: 768px) {
+            .card-title {
+                min-height: 3rem; /* Approximately 2 lines at default line-height */
+            }
+        }
+
+        /* Active navbar indicator - bottom border and darker text */
+        .nav-item.active .nav-link {
+            border-bottom: 2px solid #333;
+            padding-bottom: 0.3rem;
+            color: #000 !important;
+            font-weight: 500;
+        }
     </style>
 
     <title>Omar Olivarez | Teaching</title>
