--- a/teaching.html
+++ b/teaching.html
@@ -208,7 +208,7 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am a recipient of Harvard University's certificate in teaching, which included: 1) study and practice of pedagogical methods over the course of 3 semesters, 2) the development of my teaching statement, and 3) the creation of an original syllabus. In 2023, I also attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop to further develop my teaching style.</p>
+        <p class="fs-5">I have enjoyed the opportunity to teach at Harvard. I am a recipient of Harvard University's Certificate in Teaching and in 2023 I also attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p> <!-- , which included: 1) study and practice of pedagogical methods over the course of 3 semesters, 2) the development of my teaching statement, and 3) the creation of an original syllabus. -->
       </div>
 
       <div class="container my-5">
