--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             text-decoration: underline;
         }
 
+        /* Navbar link styling */
+        .nav-link {
+            color: rgba(0,0,0,.5) !important;
+        }
+
         /* Active navbar indicator - bottom border and darker text */
         .nav-item.active .nav-link {
             border-bottom: 2px solid #333;
