--- a/research.html
+++ b/research.html
@@ -157,6 +157,11 @@
             }
         }
 
+        /* Navbar link styling */
+        .nav-link {
+            color: rgba(0,0,0,.5) !important;
+        }
+
         /* Active navbar indicator - bottom border and darker text */
         .nav-item.active .nav-link {
             border-bottom: 2px solid #333;
@@ -187,10 +192,10 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#">Research <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="teaching.html">Teaching</a>
             </li>
           </ul>
