--- a/teaching.html
+++ b/teaching.html
@@ -157,6 +157,11 @@
             }
         }
 
+        /* Navbar link styling */
+        .nav-link {
+            color: rgba(0,0,0,.5) !important;
+        }
+
         /* Active navbar indicator - bottom border and darker text */
         .nav-item.active .nav-link {
             border-bottom: 2px solid #333;
