--- a/research.html
+++ b/research.html
@@ -208,7 +208,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Research</h1>
-            <p class="lead">My academic work</p>
+            <!--<p class="lead">My academic work</p>-->
         </div>
       </div>
 
@@ -229,7 +229,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">The effects of automation on the design of work</h5>
+                      <h5 class="card-title">The Effects of Automation on the Design of Work</h5>
                       <p class="card-text"><i>Solo-author</i><br>&nbsp;</p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i></small></p>
@@ -243,7 +243,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Outsourcing and internationalization in modern supply chains</h5>
+                      <h5 class="card-title">Outsourcing and Internationalization in Modern Supply Chains</h5>
                       <p class="card-text"><i>with R. Fontana, N. Greenstein, S. Greenstein, D. Kim, H. Zhang, R. Zhang</i></p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted"><i>Active project</i></small></p>
