--- a/teaching.html
+++ b/teaching.html
@@ -203,7 +203,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Teaching</h1>
-            <p class="lead">My courses, teaching philosophy, and materials</p>
+            <!--<p class="lead">My courses, teaching philosophy, and materials</p>-->
         </div>
       </div>
 
