--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </style>
 
     <title>Omar Olivarez</title>
-  </head>
+  <!-- </head>
   <body>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> 
