--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -133,7 +133,7 @@
     </style>
 
     <title>Omar Olivarez</title>
-  <!-- </head>
+  </head>
   <body>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> 
